- fixed style for IE11, where label wrapped to another line (#689)

--- a/ingrid-portal-mdek-application/src/main/webapp/dojo-sources/ingrid/css/styles.css
+++ b/ingrid-portal-mdek-application/src/main/webapp/dojo-sources/ingrid/css/styles.css
@@ -184,6 +184,7 @@ table.sectionTopTable{ padding: 5px 5px 2px 3px; }
 .input-inline { display: inline }
 .intend { padding-left: 20px; }
 div .inputContainer h2 { padding-bottom: 5px; }
+.outer .label label { white-space: nowrap }
 
 /* BUTTONS */
 .contentBlockWhite span.button { background: none repeat scroll 0 0 #C6C6C6; border-bottom: 0px solid #999999; display: block; height: 29px; margin-top: 4px; padding: 2px 5px 0 0; text-align: right; }
